images aligned, some styling issues sorted

--- a/styles/bodytype.css
+++ b/styles/bodytype.css
@@ -6,6 +6,8 @@ ul li {
 .panel-title {
     color: white;
     margin-top: 14px;
+    text-align: left;
+    margin-left: 15px;
 }
 
 @media (max-width: 575px) {
